# weave

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  memory_leak_test.wv  perf_issues.md  performance_benchmark.wv  test_100.wv
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  (+11 more)
docs/: scope-resolution-system.md  syntax.md  upvalues.md
sample_programs/: bench_additions.wv  bench_simple.wv  bench_timing.wv  benchmark_suite.wv  debug_closure.wv  debug_loop.wv  debug_simple.wv  test_10k_loop.wv  test_baseline_tiny.wv  test_binary_func_call.wv  test_closure_5k.wv  test_closure_basic.wv  test_closure_interactive.wv  test_closure_perf.wv  test_debug_precedence.wv  test_deep_upval.wv  test_ip.wv  test_micro_baseline.wv  test_minimal_func_call.wv  test_mutable_upvalues.wv  test_nested_simple.wv  test_nested_upval.wv  test_parser_debug.wv  test_perf_1k.wv  test_perf_baseline.wv  test_performance.wv  test_precedence_debug.wv  test_recursion.wv  test_recursive_closure.wv  test_scoping_behavior.wv  test_shared_mutable.wv  test_simple.wv  test_simple_factorial.wv  test_simple_function_call.wv  test_simple_recursion.wv  test_simple_recursive.wv  test_tiny.wv  test_tiny_loop.wv  test_triple_nested.wv  test_upval.wv  (+2 more)
src/: main.rs
(+52 files in other folders)
