[package]
name = "weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = "15.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
